Prevented jump of menu on click

--- a/sass/site/_hero-mq.scss
+++ b/sass/site/_hero-mq.scss
@@ -8,6 +8,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	flex-basis: 6.1rem;
 	padding: 0;
 	min-width: auto;
 	min-height: auto;
